--- a/package.json
+++ b/package.json
@@ -3,19 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@react-three/drei": "^9.106.2",
+    "@react-three/fiber": "^8.16.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/three": "^0.165.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
+    "react-simple-maps": "^3.0.0",
     "styled-components": "^6.1.9",
+    "three": "^0.165.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
