--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@types/three": "^0.165.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
     "react-simple-maps": "^3.0.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.9",
     "three": "^0.165.0",
     "web-vitals": "^2.1.4"
